# sigma-harvest

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  EXECUTIVE-SUMMARY.md  LICENSE  MASTER-ACTION-PLAN.md  Project Review ΣHARVEST Blueprint.txt  README.md  REMAINING-WORK.md  ROLLOUT-PLAN.md  SKILL.md  index.html  package.json  pnpm-lock.yaml  vite.config.js  vitest.config.js  w3hunter-blueprint.jsx
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/analytics/: mod.rs  reports.rs
src-tauri/src/chain/: coingecko.rs  mod.rs  provider.rs  registry.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/sigma/: compression.rs  dynamics.rs  memory.rs  mod.rs  swarm.rs  vectors.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/discovery/: dappradar.rs  galxe.rs  mod.rs  onchain.rs  rss.rs  social.rs
src-tauri/src/evaluation/: harvest_score.rs  mod.rs  risk.rs
src-tauri/src/executor/: consolidation.rs  gas_oracle.rs  mod.rs  queue.rs  simulation.rs  transaction.rs
src-tauri/src/ipc/: commands.rs
src-tauri/src/scraper/: mod.rs  parsers.rs  pipeline.rs
src-tauri/src/vault/: derivation.rs  encryption.rs  keystore.rs  mod.rs  seed.rs
src/__tests__/: chainStore.test.js  chains.test.js  constants.test.js  formatters.test.js  huntStore.test.js  notifications.test.js  priceStore.test.js  settingsStore.test.js  sigmaStore.test.js  sparkline.test.jsx  walletStore.test.js
src/components/: CommandPalette.jsx  GasTicker.jsx  HarvestFeed.jsx  (+5 more)
(+24 files in other folders)
