[package]
name = "sigma-harvest"
version = "0.1.0"
description = "ΣHARVEST — Sub-Linear Autonomous Resource Vacuum for Web3 Tokens"
authors = ["iamthegreatdestroyer"]
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
name = "sigma_harvest_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
alloy = { version = "0.1", features = ["full"], optional = true }
bip39 = "2"
bip32 = "0.5"
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
tiny-keccak = { version = "2", features = ["keccak"] }
ring = "0.17"
argon2 = "0.5"
aes-gcm = "0.10"
zeroize = { version = "1", features = ["derive"] }
scraper = "0.19"
feed-rs = "2"
cron = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"
base64 = "0.22"
rand = "0.8"
dotenvy = "0.15"
headless_chrome = "1"
tauri-plugin-notification = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
alloy-full = ["alloy"]

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
